--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -2,19 +2,13 @@
 block content %}
 <p>Hello {{ full_name }},</p>
 
-<p>
-  We received a request to reset your password. Use the verification code below
-  to proceed:
-</p>
+<p>We received a request to reset your password. Click the button below to reset it:</p>
 
-<div style="text-align: center; margin: 30px 0">
-  <h2 style="letter-spacing: 5px; font-size: 32px">{{ reset_code }}</h2>
+<div style="text-align: center; margin: 30px 0;">
+  <a href="{{ reset_link }}" style="background-color: #4CAF50; color: white; padding: 14px 25px; text-align: center; text-decoration: none; display: inline-block; border-radius: 8px; font-size: 16px;">Reset Your Password</a>
 </div>
 
-<p>
-  This code will expire in 15 minutes. If you didn't request this reset, please
-  ignore this email.
-</p>
+<p>This link will expire in 30 minutes. If you didn't request this reset, please ignore this email.</p>
 
 <p>Best regards,<br /></p>
 {% endblock %}
