fix password reset unauth

--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -2,13 +2,39 @@
 block content %}
 <p>Hello {{ full_name }},</p>
 
-<p>We received a request to reset your password. Click the button below to reset it:</p>
+<p>
+  We received a request to reset your password. Click the button below to reset
+  it:
+</p>
 
-<div style="text-align: center; margin: 30px 0;">
-  <a href="{{ reset_link }}" style="background-color: #4CAF50; color: white; padding: 14px 25px; text-align: center; text-decoration: none; display: inline-block; border-radius: 8px; font-size: 16px;">Reset Your Password</a>
+<div style="text-align: center; margin: 30px 0">
+  <a
+    href="{{ reset_link }}"
+    style="
+      background-color: #4caf50;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 8px;
+      font-size: 16px;
+    "
+    >Reset Your Password</a
+  >
 </div>
 
-<p>This link will expire in 30 minutes. If you didn't request this reset, please ignore this email.</p>
+<p>
+  If the button above doesn't work, copy and paste the following link into your
+  web browser:
+</p>
+
+<p>{{ reset_link }}</p>
+
+<p>
+  This link will expire in 30 minutes. If you didn't request this reset, please
+  ignore this email.
+</p>
 
 <p>Best regards,<br /></p>
 {% endblock %}
