--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -233,9 +233,9 @@
                         <tr>
                           <td class="webinfo">
                             <p class="website">
-                              <a href="https://invysion.com">www.invysion.com</a
+                              <a href="https://nuriq.com">www.nuriq.com</a
                               ><br />
-                              E:support@invysion.come
+                              E:support@nuriq.come
                             </p>
                           </td>
                         </tr>
